<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F57C00"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/name"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        style="@style/nameStyle" />

    <EditText
        android:id="@+id/enterHobbies"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="@string/auto_fill_hints"
        android:ems="10"
        android:hint="@string/hobby_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#3E2723" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addHobbies"
        android:text="@string/done_button" />

    <TextView
        android:id="@+id/hobbiesText"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/nameStyle">

        <TextView
            android:id="@+id/textView2"
            style="@style/generalStyle"
            android:fontFamily="@font/roboto_slab"
            android:lineSpacingMultiplier="1.8"
            android:text="@string/my_bio" />
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>